Pas de modif malgre un passage a postgresql les jobs sont maintenant concurrent un device par client un storage par client un pool par client un jobs par client

--- a/bacula/bacula-dir-jobs.conf
+++ b/bacula/bacula-dir-jobs.conf
@@ -6,9 +6,9 @@ JobDefs {
   Client = bacula-fd 
   FileSet = "Full Set"
   Schedule = "WeeklyCycle"
-  Storage = SAV_PROD_FILE
+  Storage = Default
   Messages = Standard
-  Pool = SAV_PROD_FILE
+  Pool = Default
   Priority = 10
   Write Bootstrap = "/var/spool/bacula/%c.bsr"
 }
@@ -37,6 +37,7 @@ Job {
   Level = Full
   FileSet="Catalog"
   Schedule = "CATALOG"
+  Storage = FILE_CATALOG
   # This creates an ASCII copy of the catalog
   # Arguments to make_catalog_backup.pl are:
   #  make_catalog_backup.pl <catalog-name>
@@ -57,7 +58,7 @@ Job {
   Type = Restore
   Client=bacula-fd                 
   FileSet="Full Set"                  
-  Storage = SAV_PROD_FILE
+  Storage = Default
   Pool = Default
   Messages = Standard
   Where = /tmp/bacula-restores
@@ -85,9 +86,9 @@ Job {
 	Client = bacula-fd
 	FileSet = "SAV_BACULA_FILESET"
 	Schedule = "FULL_DAILY"
-	Storage = SAV_PROD_FILE
+	Storage = FILE_SAV_BACULA
 	Messages = Standard
-	Pool = SAV_PROD_FILE
+	Pool = FILE_SAV_BACULA
 	Priority = 10
 	Write Bootstrap = "/sav/dev/sav_prod/BACULA/%c.bsr"
 }
@@ -109,6 +110,9 @@ FileSet {
     File = /tmp
 	### Repertoire de sauvegarde disque
 	File = /sav
+	File = /var/lib/nfs/rpc_pipefs
+	File = /dev
+	File = /sys
   }
 }
 
@@ -122,9 +126,9 @@ Job {
 	Client = testchris3
 	FileSet = "SAV_TESTCHRIS3_FILESET"
 	Schedule = "FULL_DAILY"
-	Storage = SAV_PROD_FILE
+	Storage = FILE_TESTCHRIS3
 	Messages = Standard
-	Pool = SAV_PROD_FILE
+	Pool = FILE_TESTCHRIS3
 	Priority = 10
 	Write Bootstrap = "/sav/dev/sav_prod/BACULA/%c.bsr"
 }
@@ -145,6 +149,8 @@ FileSet {
     File = /var/spool/bacula
     File = /tmp
     File = /proc
+	File = /dev
+	File = /sys
   }
 }
 
@@ -158,9 +164,9 @@ Job {
 	Client = fichiers
 	FileSet = "SAV_FICHIERS_FILESET"
 	Schedule = "FULL_DAILY"
-	Storage = SAV_PROD_FILE
+	Storage = FILE_FICHIERS
 	Messages = Standard
-	Pool = SAV_PROD_FILE
+	Pool = FILE_FICHIERS
 	Priority = 10
 	Write Bootstrap = "/sav/dev/sav_prod/BACULA/%c.bsr"
 }
