--- a/bacula/bacula-dir-pools.conf
+++ b/bacula/bacula-dir-pools.conf
@@ -4,12 +4,12 @@ Pool {
   Pool Type = Backup
   Recycle = yes                       # Bacula can automatically recycle Volumes
   AutoPrune = yes                     # Prune expired volumes
-  Volume Retention = 365 days         # one year
+  Volume Retention = 5 days         # one year
 }
 
 # File Pool definition
 Pool {
-  Name = SAV_PROD_FILE
+  Name = FILE_SAV_BACULA
   Pool Type = Backup
   Recycle = yes                       # Bacula can automatically recycle Volumes
   AutoPrune = yes                     # Prune expired volumes
@@ -19,6 +19,38 @@ Pool {
   Label Format = "${Level}_${Job}_${Year}-${Month:p/2/0/r}-${Day:p/2/0/r}_${Hour:p/2/0/r}${Minute:p/2/0/r}"
 }
 
+Pool {
+  Name = FILE_CATALOG
+  Pool Type = Backup
+  Recycle = yes                       # Bacula can automatically recycle Volumes
+  AutoPrune = yes                     # Prune expired volumes
+  Volume Retention = 23 hours
+  Maximum Volume Bytes = 1500G          # Limit Volume size to something reasonable
+  Maximum Volume Jobs = 1
+  Label Format = "${Level}_${Job}_${Year}-${Month:p/2/0/r}-${Day:p/2/0/r}_${Hour:p/2/0/r}${Minute:p/2/0/r}"
+}
+
+Pool {
+  Name = FILE_TESTCHRIS3
+  Pool Type = Backup
+  Recycle = yes                       # Bacula can automatically recycle Volumes
+  AutoPrune = yes                     # Prune expired volumes
+  Volume Retention = 23 hours
+  Maximum Volume Bytes = 1500G          # Limit Volume size to something reasonable
+  Maximum Volume Jobs = 1
+  Label Format = "${Level}_${Job}_${Year}-${Month:p/2/0/r}-${Day:p/2/0/r}_${Hour:p/2/0/r}${Minute:p/2/0/r}"
+}
+
+Pool {
+  Name = FILE_FICHIERS
+  Pool Type = Backup
+  Recycle = yes                       # Bacula can automatically recycle Volumes
+  AutoPrune = yes                     # Prune expired volumes
+  Volume Retention = 23 hours
+  Maximum Volume Bytes = 1500G          # Limit Volume size to something reasonable
+  Maximum Volume Jobs = 1
+  Label Format = "${Level}_${Job}_${Year}-${Month:p/2/0/r}-${Day:p/2/0/r}_${Hour:p/2/0/r}${Minute:p/2/0/r}"
+}
 
 # Scratch pool definition
 Pool {
