--- a/bacula/bacula-dir-storage.conf
+++ b/bacula/bacula-dir-storage.conf
@@ -1,11 +1,61 @@
 # Definition of file storage device
 Storage {
-  Name = SAV_PROD_FILE
+  Name = Default
 # Do not use "localhost" here    
   Address = vm-bacula-bron.groupe-sra.lan
   SDPort = 9103
   Password = "centos"
-  Device = FILE_SAV_PROD
+  Device = Default
+  Media Type = File
+}
+
+Storage {
+  Name = FILE_SAV_BACULA
+# Do not use "localhost" here    
+  Address = vm-bacula-bron.groupe-sra.lan
+  SDPort = 9103
+  Password = "centos"
+  Device = FILE_SAV_BACULA
+  Media Type = File
+}
+
+Storage {
+  Name = FILE_CATALOG
+# Do not use "localhost" here    
+  Address = vm-bacula-bron.groupe-sra.lan
+  SDPort = 9103
+  Password = "centos"
+  Device = FILE_SAV_CATALOG
+  Media Type = File
+}
+
+Storage {
+  Name = FILE_TESTCHRIS3
+# Do not use "localhost" here    
+  Address = vm-bacula-bron.groupe-sra.lan
+  SDPort = 9103
+  Password = "centos"
+  Device = FILE_TESTCHRIS3
+  Media Type = File
+}
+
+Storage {
+  Name = FILE_FICHIERS
+# Do not use "localhost" here    
+  Address = vm-bacula-bron.groupe-sra.lan
+  SDPort = 9103
+  Password = "centos"
+  Device = FILE_FICHIERS
+  Media Type = File
+}
+
+Storage {
+  Name = SAV_PROD_FILE_4
+# Do not use "localhost" here    
+  Address = vm-bacula-bron.groupe-sra.lan
+  SDPort = 9103
+  Password = "centos"
+  Device = FILE_SAV_PROD_4
   Media Type = File
 }
 
