--- a/bacula/bacula-sd.conf
+++ b/bacula/bacula-sd.conf
@@ -49,8 +49,67 @@ Director {
 #  same Name and MediaType. 
 #
 
+## J'ai besoin d'un device Default
 Device {
-  Name = FILE_SAV_PROD
+  Name = Default
+  Media Type = File
+  Archive Device = /sav/dev/sav_prod/BACULA/Default
+  LabelMedia = yes;                   # lets Bacula label unlabeled media
+  Random Access = Yes;
+  AutomaticMount = yes;               # when device opened, read it
+  RemovableMedia = no;
+  AlwaysOpen = yes;
+}
+
+## File device pour SAV_BACULA = Server BACULA
+Device {
+  Name = FILE_SAV_BACULA
+  Media Type = File
+  Archive Device = /sav/dev/sav_prod/BACULA/sav_bacula
+  LabelMedia = yes;                   # lets Bacula label unlabeled media
+  Random Access = Yes;
+  AutomaticMount = yes;               # when device opened, read it
+  RemovableMedia = no;
+  AlwaysOpen = yes;
+}
+
+## File Device pour TESTCHRIS3
+Device {
+  Name = FILE_TESTCHRIS3
+  Media Type = File
+  Archive Device = /sav/dev/sav_prod/BACULA/testchris3
+  LabelMedia = yes;                   # lets Bacula label unlabeled media
+  Random Access = Yes;
+  AutomaticMount = yes;               # when device opened, read it
+  RemovableMedia = no;
+  AlwaysOpen = yes;
+}
+
+## File Device pour Fichiers
+Device {
+  Name = FILE_FICHIERS
+  Media Type = File
+  Archive Device = /sav/dev/sav_prod/BACULA/fichiers
+  LabelMedia = yes;                   # lets Bacula label unlabeled media
+  Random Access = Yes;
+  AutomaticMount = yes;               # when device opened, read it
+  RemovableMedia = no;
+  AlwaysOpen = yes;
+}
+
+Device {
+  Name = FILE_CATALOG
+  Media Type = File
+  Archive Device = /sav/dev/sav_prod/BACULA/catalog
+  LabelMedia = yes;                   # lets Bacula label unlabeled media
+  Random Access = Yes;
+  AutomaticMount = yes;               # when device opened, read it
+  RemovableMedia = no;
+  AlwaysOpen = yes;
+}
+
+Device {
+  Name = FILE_SAV_PROD_4
   Media Type = File
   Archive Device = /sav/dev/sav_prod/BACULA
   LabelMedia = yes;                   # lets Bacula label unlabeled media
