--- a/bacula/old/bconsole.conf
+++ b/bacula/old/bconsole.conf
@@ -3,8 +3,8 @@
 #
 
 Director {
-  Name = chris-r61i-dir
+  Name = bacula-dir
   DIRport = 9101
   address = localhost
-  Password = "KsckwkjuoxWZqY1ZvT3i73VSn8QUiQwma"
+  Password = "@@DIR_PASSWORD@@"
 }
