--- a/bacula/old/tray-monitor.conf
+++ b/bacula/old/tray-monitor.conf
@@ -3,27 +3,27 @@
 #
 
 Monitor {
-  Name = chris-r61i-mon
-  Password = "67_iTZWRqZh9qp8VkKEdbyZIBR8b4fqL8"         # password for the Directors   
+  Name = bacula-mon
+  Password = "@@MON_DIR_PASSWORD@@"         # password for the Directors   
   RefreshInterval = 5 seconds
 }
    
 Client {
-  Name = chris-r61i-fd
-  Address = localhost
+  Name = bacula-fd
+  Address = client.example.com
   FDPort = 9102
-  Password = "1y4kmqP3ELZWHLG3cCzBYNZi4xTMUgk2g"          # password for FileDaemon
+  Password = "@@MON_FD_PASSWORD@@"          # password for FileDaemon
 }
 
 Storage {
-  Name = chris-r61i-sd
-  Address = localhost
+  Name = bacula-sd
+  Address = storage.example.com
   SDPort = 9103
-  Password = "7y6pfq8oJk6HZ2_8_jMFj3ik62MXCfu-v"          # password for StorageDaemon
+  Password = "@@MON_SD_PASSWORD@@"          # password for StorageDaemon
 }
 
 Director {
-  Name = chris-r61i-dir
+  Name = bacula-dir
+  Address = director.example.com
   DIRport = 9101
-  address = localhost
 }
