--- a/bacula/old/bacula-dir.conf
+++ b/bacula/old/bacula-dir.conf
@@ -5,7 +5,7 @@
 #   file or directory names in the Include directive of the
 #   FileSet resource.
 #
-#  For Bacula release 5.2.6 (21 February 2012) -- ubuntu 12.10
+#  For Bacula release 5.0.0 (26 January 2010) -- redhat 
 #
 #  You might also want to change the default email address
 #   from root to your address.  See the "mail" and "operator"
@@ -13,56 +13,42 @@
 #
 
 Director {                            # define myself
-  Name = chris-r61i-dir
+  Name = bacula-dir
   DIRport = 9101                # where we listen for UA connections
-  QueryFile = "/etc/bacula/scripts/query.sql"
-  WorkingDirectory = "/var/lib/bacula"
-  PidDirectory = "/run/bacula"
+  QueryFile = "/usr/libexec/bacula/query.sql"
+  WorkingDirectory = "/var/spool/bacula"
+  PidDirectory = "/var/run"
   Maximum Concurrent Jobs = 1
-  Password = "KsckwkjuoxWZqY1ZvT3i73VSn8QUiQwma"         # Console password
+  Password = "@@DIR_PASSWORD@@"         # Console password
   Messages = Daemon
-  DirAddress = 127.0.0.1
 }
 
 JobDefs {
   Name = "DefaultJob"
   Type = Backup
   Level = Incremental
-  Client = chris-r61i-fd
+  Client = bacula-fd 
   FileSet = "Full Set"
   Schedule = "WeeklyCycle"
   Storage = File
   Messages = Standard
   Pool = File
   Priority = 10
-  Write Bootstrap = "/var/lib/bacula/%c.bsr"
+  Write Bootstrap = "/var/spool/bacula/%c.bsr"
 }
 
 
 #
 # Define the main nightly save backup job
-#   By default, this job will back up to disk in /nonexistant/path/to/file/archive/dir
-#Job {
-#  Name = "BackupClient1"
-#  JobDefs = "DefaultJob"
-#}
-
+#   By default, this job will back up to disk in /tmp
 Job {
-	Name = "JOB1"
-	Type = Backup
-	Level = Full
-	Client = chris-r61i-fd
-	FileSet = "TEST_FILE_SET"
-	Storage = File
-    Messages = Standard
-    Pool = File
-    Priority = 10
-    Write Bootstrap = "/var/lib/bacula/%c.bsr"
+  Name = "BackupClient1"
+  JobDefs = "DefaultJob"
 }
 
 #Job {
 #  Name = "BackupClient2"
-#  Client = chris-r61i2-fd
+#  Client = bacula2-fd
 #  JobDefs = "DefaultJob"
 #}
 
@@ -76,10 +62,10 @@ Job {
   # This creates an ASCII copy of the catalog
   # Arguments to make_catalog_backup.pl are:
   #  make_catalog_backup.pl <catalog-name>
-  RunBeforeJob = "/etc/bacula/scripts/make_catalog_backup.pl MyCatalog"
+  RunBeforeJob = "/usr/libexec/bacula/make_catalog_backup.pl MyCatalog"
   # This deletes the copy of the catalog
-  RunAfterJob  = "/etc/bacula/scripts/delete_catalog_backup"
-  Write Bootstrap = "/var/lib/bacula/%n.bsr"
+  RunAfterJob  = "/usr/libexec/bacula/delete_catalog_backup"
+  Write Bootstrap = "/var/spool/bacula/%n.bsr"
   Priority = 11                   # run after main backup
 }
 
@@ -90,12 +76,12 @@ Job {
 Job {
   Name = "RestoreFiles"
   Type = Restore
-  Client=chris-r61i-fd
+  Client=bacula-fd                 
   FileSet="Full Set"                  
   Storage = File                      
   Pool = Default
   Messages = Standard
-  Where = /home/chris/bacula/test/recup
+  Where = /tmp/bacula-restores
 }
 
 
@@ -120,7 +106,7 @@ FileSet {
 #    directory to give a reasonable FileSet to backup to
 #    disk storage during initial testing.
 #
-    File = /home/chris/bacula/test/a_sauver
+    File = /usr/sbin
   }
 
 #
@@ -128,25 +114,12 @@ FileSet {
 #   files can be useful
 #
   Exclude {
-    File = /var/lib/bacula
-    File = /nonexistant/path/to/file/archive/dir
+    File = /var/spool/bacula
+    File = /tmp
     File = /proc
     File = /tmp
     File = /.journal
     File = /.fsck
-  }
-}
-#
-# MON FILE SET
-FileSet {
-  Name = "TEST_FILE_SET"
-  Include {
-    Options {
-      signature = MD5
-    }
-    File = /home/chris/bacula/test/a_sauver
-  }
-  Exclude {
   }
 }
 
@@ -174,17 +147,17 @@ FileSet {
     Options {
       signature = MD5
     }
-    File = "/var/lib/bacula/bacula.sql"
+    File = "/var/spool/bacula/bacula.sql"
   }
 }
 
 # Client (File Services) to backup
 Client {
-  Name = chris-r61i-fd
-  Address = localhost
+  Name = bacula-fd
+  Address = client.example.com
   FDPort = 9102
   Catalog = MyCatalog
-  Password = "DOWOFyQPI0m31-aI0iVsEBr-1FjhFLOiv"          # password for FileDaemon
+  Password = "@@FD_PASSWORD@@"          # password for FileDaemon
   File Retention = 30 days            # 30 days
   Job Retention = 6 months            # six months
   AutoPrune = yes                     # Prune expired Jobs/Files
@@ -195,11 +168,11 @@ Client {
 #  You should change Name, Address, and Password before using
 #
 #Client {
-#  Name = chris-r61i2-fd
-#  Address = localhost2
+#  Name = bacula2-fd                
+#  Address = client2.example.com
 #  FDPort = 9102
 #  Catalog = MyCatalog
-#  Password = "DOWOFyQPI0m31-aI0iVsEBr-1FjhFLOiv2"         # password for FileDaemon 2
+#  Password = "@@FD_PASSWORD@@2"         # password for FileDaemon 2
 #  File Retention = 30 days            # 30 days
 #  Job Retention = 6 months            # six months
 #  AutoPrune = yes                     # Prune expired Jobs/Files
@@ -210,9 +183,9 @@ Client {
 Storage {
   Name = File
 # Do not use "localhost" here    
-  Address = chris-r61i # N.B. Use a fully qualified name here
+  Address = storage.example.com                # N.B. Use a fully qualified name here
   SDPort = 9103
-  Password = "n5hMsqxx09f0VoxD0V4Fq5oZ3UIZEV-i3"
+  Password = "@@SD_PASSWORD@@"
   Device = FileStorage
   Media Type = File
 }
@@ -223,9 +196,9 @@ Storage {
 #Storage {
 #  Name = DDS-4    
 #  Do not use "localhost" here
-#  Address = localhost                # N.B. Use a fully qualified name here
+#  Address = storage.example.com                # N.B. Use a fully qualified name here
 #  SDPort = 9103
-#  Password = "n5hMsqxx09f0VoxD0V4Fq5oZ3UIZEV-i3"          # password for Storage daemon
+#  Password = "@@SD_PASSWORD@@"          # password for Storage daemon
 #  Device = DDS-4                      # must be same as Device in Storage daemon
 #  Media Type = DDS-4                  # must be same as MediaType in Storage daemon
 #  Autochanger = yes                   # enable for autochanger device
@@ -235,9 +208,9 @@ Storage {
 #Storage {
 #  Name = "8mmDrive"
 #  Do not use "localhost" here
-#  Address = localhost                # N.B. Use a fully qualified name here
+#  Address = storage.example.com                # N.B. Use a fully qualified name here
 #  SDPort = 9103
-#  Password = "n5hMsqxx09f0VoxD0V4Fq5oZ3UIZEV-i3"
+#  Password = "@@SD_PASSWORD@@"
 #  Device = "Exabyte 8mm"
 #  MediaType = "8mm"
 #}
@@ -246,9 +219,9 @@ Storage {
 #Storage {
 #  Name = "DVD"
 #  Do not use "localhost" here
-#  Address = localhost                # N.B. Use a fully qualified name here
+#  Address = storage.example.com                # N.B. Use a fully qualified name here
 #  SDPort = 9103
-#  Password = "n5hMsqxx09f0VoxD0V4Fq5oZ3UIZEV-i3"
+#  Password = "@@SD_PASSWORD@@"
 #  Device = "DVD Writer"
 #  MediaType = "DVD"
 #}
@@ -258,8 +231,8 @@ Storage {
 Catalog {
   Name = MyCatalog
 # Uncomment the following line if you want the dbi driver
-# dbdriver = "dbi:postgresql"; dbaddress = 127.0.0.1; dbport =  
-  dbname = "bacula"; DB Address = ""; dbuser = "bacula"; dbpassword = "racine"
+# dbdriver = "dbi:sqlite3"; dbaddress = 127.0.0.1; dbport =  
+  dbname = "bacula"; dbuser = "bacula"; dbpassword = ""
 }
 
 # Reasonable message delivery -- send most everything to email address
@@ -280,15 +253,15 @@ Messages {
 #
   mailcommand = "/usr/sbin/bsmtp -h localhost -f \"\(Bacula\) \<%r\>\" -s \"Bacula: %t %e of %c %l\" %r"
   operatorcommand = "/usr/sbin/bsmtp -h localhost -f \"\(Bacula\) \<%r\>\" -s \"Bacula: Intervention needed for %j\" %r"
-  mail = root = all, !skipped            
-  operator = root = mount
+  mail = root@localhost = all, !skipped            
+  operator = root@localhost = mount
   console = all, !skipped, !saved
 #
 # WARNING! the following will create a file that you must cycle from
 #          time to time as it will grow indefinitely. However, it will
 #          also keep all your messages if they scroll off the console.
 #
-  append = "/var/log/bacula/bacula.log" = all, !skipped
+  append = "/var/spool/bacula/log" = all, !skipped
   catalog = all
 }
 
@@ -298,9 +271,9 @@ Messages {
 Messages {
   Name = Daemon
   mailcommand = "/usr/sbin/bsmtp -h localhost -f \"\(Bacula\) \<%r\>\" -s \"Bacula daemon message\" %r"
-  mail = root = all, !skipped            
+  mail = root@localhost = all, !skipped            
   console = all, !skipped, !saved
-  append = "/var/log/bacula/bacula.log" = all, !skipped
+  append = "/var/log/bacula.log" = all, !skipped
 }
 
 # Default pool definition
@@ -319,8 +292,8 @@ Pool {
   Recycle = yes                       # Bacula can automatically recycle Volumes
   AutoPrune = yes                     # Prune expired volumes
   Volume Retention = 365 days         # one year
-  Maximum Volume Bytes = 1G          # Limit Volume size to something reasonable
-  Maximum Volumes = 5               # Limit number of Volumes in Pool
+  Maximum Volume Bytes = 50G          # Limit Volume size to something reasonable
+  Maximum Volumes = 100               # Limit number of Volumes in Pool
 }
 
 
@@ -334,7 +307,7 @@ Pool {
 # Restricted console used by tray-monitor to get the status of the director
 #
 Console {
-  Name = chris-r61i-mon
-  Password = "67_iTZWRqZh9qp8VkKEdbyZIBR8b4fqL8"
+  Name = bacula-mon
+  Password = "@@MON_DIR_PASSWORD@@"
   CommandACL = status, .status
 }
