Je crois que je commence a comprendre comment il faudra faire
par contre le label doit etre REVU

--- a/bacula/bacula-dir-clients.conf
+++ b/bacula/bacula-dir-clients.conf
@@ -5,8 +5,8 @@ Client {
   FDPort = 9102
   Catalog = MyCatalog
   Password = "centos"          # password for FileDaemon
-  File Retention = 30 days            # 30 days
-  Job Retention = 6 months            # six months
+  File Retention = 23 hours
+  Job Retention = 23 hours
   AutoPrune = yes                     # Prune expired Jobs/Files
 }
 
@@ -17,8 +17,8 @@ Client {
   FDPort = 9102
   Catalog = MyCatalog
   Password = "racine"          # password for FileDaemon
-  File Retention = 30 days            # 30 days
-  Job Retention = 6 months            # six months
+  File Retention = 23 hours
+  Job Retention = 23 hours
   AutoPrune = yes                     # Prune expired Jobs/Files
 }
 
@@ -29,7 +29,7 @@ Client {
   FDPort = 9102
   Catalog = MyCatalog
   Password = "racine"          # password for FileDaemon
-  File Retention = 30 days            # 30 days
-  Job Retention = 6 months            # six months
+  File Retention = 23 hours
+  Job Retention = 23 hours
   AutoPrune = yes                     # Prune expired Jobs/Files
 }
