--- a/bacula/bacula-dir-jobs.conf
+++ b/bacula/bacula-dir-jobs.conf
@@ -36,8 +36,10 @@ Job {
   JobDefs = "DefaultJob"
   Level = Full
   FileSet="Catalog"
-  Schedule = "CATALOG"
+  ## Avec priority => execution apres tout les autres
+  Schedule = "FULL_DAILY"
   Storage = FILE_CATALOG
+  Pool = FILE_CATALOG
   # This creates an ASCII copy of the catalog
   # Arguments to make_catalog_backup.pl are:
   #  make_catalog_backup.pl <catalog-name>
@@ -49,10 +51,21 @@ Job {
   Priority = 11                   # run after main backup
 }
 
-#
+# This is the backup of the catalog
+FileSet {
+  Name = "Catalog"
+  Include {
+    Options {
+      signature = MD5
+    }
+    File = "/var/spool/bacula/bacula.sql"
+  }
+}
+
+# ---------------------------------------------------------------
 # Standard Restore template, to be changed by Console program
 #  Only one such job is needed for all Jobs/Clients/Storage ...
-#
+# ---------------------------------------------------------------
 Job {
   Name = "RestoreFiles"
   Type = Restore
@@ -65,16 +78,6 @@ Job {
 }
 
 
-# This is the backup of the catalog
-FileSet {
-  Name = "Catalog"
-  Include {
-    Options {
-      signature = MD5
-    }
-    File = "/var/spool/bacula/bacula.sql"
-  }
-}
 
 ## ----------------------------
 ## Sauvegarde SERVEUR BACULA
@@ -93,7 +96,11 @@ Job {
 	Write Bootstrap = "/sav/dev/sav_prod/BACULA/%c.bsr"
 }
 
+## --------------------------------
 # SAV_BACULA
+# Sauvegarde du serveur BACULA
+# en plus du catalog
+## --------------------------------
 FileSet {
   Name = "SAV_BACULA_FILESET"
   Include {
