--- a/bacula/bacula-dir-pools.conf
+++ b/bacula/bacula-dir-pools.conf
@@ -4,7 +4,7 @@ Pool {
   Pool Type = Backup
   Recycle = yes                       # Bacula can automatically recycle Volumes
   AutoPrune = yes                     # Prune expired volumes
-  Volume Retention = 5 days         # one year
+  Volume Retention = 23 hours
 }
 
 # File Pool definition
@@ -14,9 +14,10 @@ Pool {
   Recycle = yes                       # Bacula can automatically recycle Volumes
   AutoPrune = yes                     # Prune expired volumes
   Volume Retention = 23 hours
-  Maximum Volume Bytes = 1500G          # Limit Volume size to something reasonable
+  Maximum Volume Bytes = 30G          # Limit Volume size to something reasonable
   Maximum Volume Jobs = 1
   Label Format = "${Level}_${Job}_${Year}-${Month:p/2/0/r}-${Day:p/2/0/r}_${Hour:p/2/0/r}${Minute:p/2/0/r}"
+  Maximum Volumes = 1
 }
 
 Pool {
@@ -24,10 +25,11 @@ Pool {
   Pool Type = Backup
   Recycle = yes                       # Bacula can automatically recycle Volumes
   AutoPrune = yes                     # Prune expired volumes
-  Volume Retention = 23 hours
-  Maximum Volume Bytes = 1500G          # Limit Volume size to something reasonable
+  Volume Retention = 7 days
+  Maximum Volume Bytes = 5G          # Limit Volume size to something reasonable
   Maximum Volume Jobs = 1
   Label Format = "${Level}_${Job}_${Year}-${Month:p/2/0/r}-${Day:p/2/0/r}_${Hour:p/2/0/r}${Minute:p/2/0/r}"
+  Maximum Volumes = 1
 }
 
 Pool {
@@ -36,9 +38,10 @@ Pool {
   Recycle = yes                       # Bacula can automatically recycle Volumes
   AutoPrune = yes                     # Prune expired volumes
   Volume Retention = 23 hours
-  Maximum Volume Bytes = 1500G          # Limit Volume size to something reasonable
+  Maximum Volume Bytes = 30G          # Limit Volume size to something reasonable
   Maximum Volume Jobs = 1
   Label Format = "${Level}_${Job}_${Year}-${Month:p/2/0/r}-${Day:p/2/0/r}_${Hour:p/2/0/r}${Minute:p/2/0/r}"
+  Maximum Volumes = 1
 }
 
 Pool {
@@ -47,9 +50,10 @@ Pool {
   Recycle = yes                       # Bacula can automatically recycle Volumes
   AutoPrune = yes                     # Prune expired volumes
   Volume Retention = 23 hours
-  Maximum Volume Bytes = 1500G          # Limit Volume size to something reasonable
+  Maximum Volume Bytes = 300G          # Limit Volume size to something reasonable
   Maximum Volume Jobs = 1
   Label Format = "${Level}_${Job}_${Year}-${Month:p/2/0/r}-${Day:p/2/0/r}_${Hour:p/2/0/r}${Minute:p/2/0/r}"
+  Maximum Volumes = 1
 }
 
 # Scratch pool definition
