--- a/bacula/bacula-dir-schedules.conf
+++ b/bacula/bacula-dir-schedules.conf
@@ -21,7 +21,9 @@ Schedule {
   Run = Full daily at 02:00
 }
 
-# This schedule does the catalog. It starts after the WeeklyCycle
+##
+## On sauvegarde tout tous les jours
+##
 Schedule {
   Name = "FULL_DAILY"
   Run = Full daily at 22:00
