--- a/bacula/bacula-dir.conf
+++ b/bacula/bacula-dir.conf
@@ -34,6 +34,8 @@ Director {                            # define myself
 @!!BACULA_TRAV!!bacula-dir-pools.conf
 @!!BACULA_TRAV!!bacula-dir-storage.conf
 @!!BACULA_TRAV!!bacula-dir-catalog.conf
+## Pour TEST
+@!!BACULA_TRAV!!bacula-dir-test.conf
 
 
 # Reasonable message delivery -- send most everything to email address
