--- a/bacula/bacula-dir-storage.conf
+++ b/bacula/bacula-dir-storage.conf
@@ -25,7 +25,7 @@ Storage {
   Address = vm-bacula-bron.groupe-sra.lan
   SDPort = 9103
   Password = "centos"
-  Device = FILE_SAV_CATALOG
+  Device = FILE_CATALOG
   Media Type = File
 }
 
