--- a/bacula/bacula-sd.conf
+++ b/bacula/bacula-sd.conf
@@ -109,6 +109,17 @@ Device {
 }
 
 Device {
+  Name = FILE_TEST
+  Media Type = File
+  Archive Device = /sav/dev/sav_prod/BACULA/TEST
+  LabelMedia = yes;                   # lets Bacula label unlabeled media
+  Random Access = Yes;
+  AutomaticMount = yes;               # when device opened, read it
+  RemovableMedia = no;
+  AlwaysOpen = yes;
+}
+
+Device {
   Name = FILE_SAV_PROD_4
   Media Type = File
   Archive Device = /sav/dev/sav_prod/BACULA
