--- a/bacula/bacula-dir-pools.conf
+++ b/bacula/bacula-dir-pools.conf
@@ -16,7 +16,8 @@ Pool {
   Volume Retention = 23 hours
   Maximum Volume Bytes = 30G          # Limit Volume size to something reasonable
   Maximum Volume Jobs = 1
-  Label Format = "${Level}_${Job}_${Year}-${Month:p/2/0/r}-${Day:p/2/0/r}_${Hour:p/2/0/r}${Minute:p/2/0/r}"
+  #Label Format = "${Level}_${Job}_${Year}-${Month:p/2/0/r}-${Day:p/2/0/r}_${Hour:p/2/0/r}${Minute:p/2/0/r}"
+  Label Format = "${Level}_${Job}"
   Maximum Volumes = 1
 }
 
@@ -28,7 +29,8 @@ Pool {
   Volume Retention = 7 days
   Maximum Volume Bytes = 5G          # Limit Volume size to something reasonable
   Maximum Volume Jobs = 1
-  Label Format = "${Level}_${Job}_${Year}-${Month:p/2/0/r}-${Day:p/2/0/r}_${Hour:p/2/0/r}${Minute:p/2/0/r}"
+  #Label Format = "${Level}_${Job}_${Year}-${Month:p/2/0/r}-${Day:p/2/0/r}_${Hour:p/2/0/r}${Minute:p/2/0/r}"
+  Label Format = "${Level}_${Job}"
   Maximum Volumes = 1
 }
 
@@ -40,7 +42,8 @@ Pool {
   Volume Retention = 23 hours
   Maximum Volume Bytes = 30G          # Limit Volume size to something reasonable
   Maximum Volume Jobs = 1
-  Label Format = "${Level}_${Job}_${Year}-${Month:p/2/0/r}-${Day:p/2/0/r}_${Hour:p/2/0/r}${Minute:p/2/0/r}"
+  #Label Format = "${Level}_${Job}_${Year}-${Month:p/2/0/r}-${Day:p/2/0/r}_${Hour:p/2/0/r}${Minute:p/2/0/r}"
+  Label Format = "${Level}_${Job}"
   Maximum Volumes = 1
 }
 
@@ -52,7 +55,8 @@ Pool {
   Volume Retention = 23 hours
   Maximum Volume Bytes = 300G          # Limit Volume size to something reasonable
   Maximum Volume Jobs = 1
-  Label Format = "${Level}_${Job}_${Year}-${Month:p/2/0/r}-${Day:p/2/0/r}_${Hour:p/2/0/r}${Minute:p/2/0/r}"
+  #Label Format = "${Level}_${Job}_${Year}-${Month:p/2/0/r}-${Day:p/2/0/r}_${Hour:p/2/0/r}${Minute:p/2/0/r}"
+  Label Format = "${Level}_${Job}"
   Maximum Volumes = 1
 }
 
