--- a/bacula/bacula-dir-test.conf
+++ b/bacula/bacula-dir-test.conf
@@ -26,7 +26,9 @@ Job {
     level = Full
     Client = syssrc
     FileSet = "SAV_TEST_FILESET"
-    Schedule = "TEST"
+	## Pour TEST => 10 mn
+    #Schedule = "TEST"
+    Schedule = "FULL_DAILY"
     Storage = FILE_TEST
     Messages = Standard
     Pool = FILE_TEST
@@ -60,7 +62,8 @@ Pool {
   Volume Retention = 9 minutes
   Maximum Volume Bytes = 1G          # Limit Volume size to something reasonable
   Maximum Volume Jobs = 1
-  Label Format = "TEST_${Level}_${Job}_${Year}-${Month:p/2/0/r}-${Day:p/2/0/r}_${Hour:p/2/0/r}${Minute:p/2/0/r}"
+  #Label Format = "TEST_${Level}_${Job}_${Year}-${Month:p/2/0/r}-${Day:p/2/0/r}_${Hour:p/2/0/r}${Minute:p/2/0/r}"
+  Label Format = "${Level}_${Job}"
   Maximum Volumes = 1
 }
 
