Modification pour le test
La sauvegarde s'effectue en differential
avec un Full Regulier
Cela tourne avec un VOLUME Disque par jour (differentiel)
et 2 volumes FULL

L'avantage de ce style de fichiers c'est que tout (ou presque)
les informations concernant un client est dans un seul fichier

--- a/bacula/bacula-dir-test.conf
+++ b/bacula/bacula-dir-test.conf
@@ -12,26 +12,53 @@ Client {
   FDPort = 9102
   Catalog = MyCatalog
   Password = "racine"          # password for FileDaemon
-  File Retention = 9 minutes
-  Job Retention = 9 minutes
+  ## On conserve une trace dans le catalogue d'un mois
+  File Retention = 1 month
+  Job Retention = 1 month
   AutoPrune = yes                     # Prune expired Jobs/Files
 }
 
+## -----------------------
+## TEST :
+## Simulation d'un semaine
+## 7 jours 
+## Dimanche => Full Backup
+## Lundi => Differential
+## Mardi => Differential
+## Mercredi => Differential
+## Jeudi => Differential
+## Vendredi => Differential
+## Samedi => Differential
+## On conserve 2 volume Full
+## Les differentiels doivent se recycler
+## -----------------------
+## Pour simuler tout cela 
+## Toutes les 10 minutes 
+## 00 => Full 
+## 10..50 => Differential
+## -------------------------------------------------------------
+## Prevoir de faire des modifs sur les fichiers regulierement
+## Par contre il NE FAUT PAS CREER PLUSIEURS JOBS
+## SINON CELA NE FONCTIONNE PAS
+
 ## ------------------
 # Description du Job
+#
 ## ------------------
 Job {
-    Name = "SAV_TEST"
+    Name = "TEST_BACKUP"
     Type = Backup
-    level = Full
+    #level = Differential
     Client = syssrc
     FileSet = "SAV_TEST_FILESET"
-	## Pour TEST => 10 mn
-    #Schedule = "TEST"
-    Schedule = "FULL_DAILY"
+    Schedule = "TEST_BACKUP"
     Storage = FILE_TEST
     Messages = Standard
-    Pool = FILE_TEST
+	## A CHANGER
+    Pool = Default
+	Full Backup Pool = TEST_FULL
+	#Incremental Backup Pool = Inc-Pool
+	Differential Backup Pool = TEST_DIFF
     Priority = 10
     Write Bootstrap = "/sav/dev/sav_prod/BACULA/%c.bsr"
 }
@@ -45,7 +72,8 @@ FileSet {
     Options {
       signature = MD5
     }
-    File = /boot
+    #File = /boot
+	File = /root/bacula
   }
 
   Exclude {
@@ -54,19 +82,39 @@ FileSet {
     File = /proc
   }
 }
+
 Pool {
-  Name = FILE_TEST
+  Name = TEST_FULL
   Pool Type = Backup
   Recycle = yes                       # Bacula can automatically recycle Volumes
   AutoPrune = yes                     # Prune expired volumes
-  Volume Retention = 9 minutes
+  ## Volume retention = 2h - 10 minutes = 110 mn
+  ## Normalement le samedi pas de modifs donc Dimanche + tout les diffs = tt la semaine
+  Volume Retention = 110 minutes
   Maximum Volume Bytes = 1G          # Limit Volume size to something reasonable
   Maximum Volume Jobs = 1
-  #Label Format = "TEST_${Level}_${Job}_${Year}-${Month:p/2/0/r}-${Day:p/2/0/r}_${Hour:p/2/0/r}${Minute:p/2/0/r}"
-  Label Format = "${Level}_${Job}"
-  Maximum Volumes = 1
+  Label Format = "FULL_${Job}_${NumVols}"
+  ## ON garde 2 Full
+  Maximum Volumes = 2
 }
 
+Pool {
+  Name = TEST_DIFF
+  Pool Type = Backup
+  Recycle = yes                       # Bacula can automatically recycle Volumes
+  AutoPrune = yes                     # Prune expired volumes
+  ## Les volumes peuvent être recycler au bout d'un cycle
+  Volume Retention = 50 minutes
+  Maximum Volume Bytes = 1G          # Limit Volume size to something reasonable
+  Maximum Volume Jobs = 1
+  Label Format = "DIFF_${Job}_${NumVols}"
+  ## Un volume par jour
+  Maximum Volumes = 6
+}
+
+## -------------------
+## STORAGE
+## -------------------
 Storage {
   Name = FILE_TEST
 # Do not use "localhost" here
@@ -77,13 +125,17 @@ Storage {
   Media Type = File
 }
 
-# This schedule does the catalog. It starts after the WeeklyCycle
+## ---------
+## Schedule 
+## ---------
 Schedule {
-  Name = "TEST"
-  Run = Full hourly at 00:00
-  Run = Full hourly at 00:10
-  Run = Full hourly at 00:20
-  Run = Full hourly at 00:30
-  Run = Full hourly at 00:40
-  Run = Full hourly at 00:50
+  Name = "TEST_BACKUP"
+  Run = Level=Full Pool=TEST_FULL hourly at 00:00			# Correspond au dimanche
+  Run = Level=Differential Pool=TEST_DIFF hourly at 00:10	# Lundi
+  Run = Level=Differential Pool=TEST_DIFF hourly at 00:15	# Mardi
+  Run = Level=Differential Pool=TEST_DIFF hourly at 00:20	# Mercredi
+  Run = Level=Differential Pool=TEST_DIFF hourly at 00:30	# Jeudi
+  Run = Level=Differential Pool=TEST_DIFF hourly at 00:40	# Vendredi
+  Run = Level=Differential Pool=TEST_DIFF hourly at 00:50	# Samedi
 }
+
