Ajout des clients FICHIERS et ALFRESCO Probleme avec alfresco le script ne focntionne pas bien

--- a/bacula/bacula-dir.conf
+++ b/bacula/bacula-dir.conf
@@ -34,8 +34,11 @@ Director {                            # define myself
 @!!BACULA_TRAV!!bacula-dir-pools.conf
 @!!BACULA_TRAV!!bacula-dir-storage.conf
 @!!BACULA_TRAV!!bacula-dir-catalog.conf
+## Clients
+@!!BACULA_TRAV!!bacula-dir-alfresco.conf
+@!!BACULA_TRAV!!bacula-dir-FICHIERS.conf
 ## Pour TEST
-@!!BACULA_TRAV!!bacula-dir-test.conf
+#@!!BACULA_TRAV!!bacula-dir-test.conf
 
 
 # Reasonable message delivery -- send most everything to email address
